--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
 
 		<section id="main_content" class="inner">
 
-このページは次の論文の内容に関するWebページです。
+左側のボックス内の説明を読んで進めてください。<strong>最後に右側のボックスの下の送信ボタンを必ず押してください</strong>。
 
 			<div style="height:20px;"></div>
 
@@ -77,46 +77,73 @@ body {
 
 				<div class="LColumn">
 					<div class="box">
-						以下の曲を聴いて、良いと思う方を答えてください<br>
-						お願いします<br>
-						<br>
 
-						なんばー
-						<div id="DisplaySeed"></div>
+						<strong>はじめに、下の実験ナンバーを右側の回答ボックスにコピーしてください。</strong>
 						<br><br>
 
-						<div id="Test"></div>
+						実験ナンバー
+						<div id="DisplaySeed"></div>
+						<br>
+
+						<strong>以下のAとBの曲を聴いて、良いと思う方を右側のボックスで答えてください。どちらとも言い難い場合は、適当にAかBを選んでください。</strong>
 						<br><br>
 
 						1-A<br>
 						<audio id="Audio1A" controls preload="metadata" src="">エラー</audio>
 						<br>
 						1-B<br>
-						<audio id="Audio1B" controls preload="metadata" src="https://creevo-music.com/api/static/project_278_instr.mp3">エラー</audio>
+						<audio id="Audio1B" controls preload="metadata" src="">エラー</audio>
 						<br><br>
 
 						2-A<br>
-						<audio id="Audio2A" controls preload="metadata" src="https://creevo-music.com/api/static/project_279_instr.mp3">エラー</audio>
+						<audio id="Audio2A" controls preload="metadata" src="">エラー</audio>
 						<br>
 						2-B<br>
-						<audio id="Audio2B" controls preload="metadata" src="https://creevo-music.com/api/static/project_280_instr.mp3">エラー</audio>
+						<audio id="Audio2B" controls preload="metadata" src="">エラー</audio>
 						<br><br>
 
+						3-A<br>
+						<audio id="Audio3A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						3-B<br>
+						<audio id="Audio3B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
 
-						100<br>
-						<audio controls src="https://creevo-music.com/api/static/project_100_instr.mp3">エラー</audio><br>
-						101<br>
-						<audio controls src="https://creevo-music.com/api/static/project_101_instr.mp3">エラー</audio><br>
-						102<br>
-						<audio controls src="https://creevo-music.com/api/static/project_102_instr.mp3">エラー</audio><br>
-						103<br>
-						<audio controls src="https://creevo-music.com/api/static/project_103_instr.mp3">エラー</audio><br>
-						104<br>
-						<audio controls src="https://creevo-music.com/api/static/project_104_instr.mp3">エラー</audio><br>
-						105<br>
-						<audio controls src="https://creevo-music.com/api/static/project_105_instr.mp3">エラー</audio><br>
-						106<br>
-						<audio controls src="https://creevo-music.com/api/static/project_106_instr.mp3">エラー</audio><br>
+						4-A<br>
+						<audio id="Audio4A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						4-B<br>
+						<audio id="Audio4B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
+
+						5-A<br>
+						<audio id="Audio5A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						5-B<br>
+						<audio id="Audio5B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
+
+						6-A<br>
+						<audio id="Audio6A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						6-B<br>
+						<audio id="Audio6B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
+
+						7-A<br>
+						<audio id="Audio7A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						7-B<br>
+						<audio id="Audio7B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
+
+						8-A<br>
+						<audio id="Audio8A" controls preload="metadata" src="">エラー</audio>
+						<br>
+						8-B<br>
+						<audio id="Audio8B" controls preload="metadata" src="">エラー</audio>
+						<br><br>
+
 
 					</div>
 				</div>
@@ -135,7 +162,7 @@ body {
 	<!-- FOOTER  -->
 	<div id="footer_wrap" class="outer">
 		<footer class="inner">
-		<p class="copyright">Maintained by Eita Nakamura　(最終更新: 2021年6月)</p>
+		<p class="copyright">Maintained by Eita Nakamura　(最終更新: 2021年7月)</p>
 		</footer>
 	</div>
 
