--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
 		ol.multi-column {float: left; width: 100%; line-height: 10px;}
 		ol.multi-column li {float: left; width: 50%; margin-bottom: 10px;}
 
-
 body {
-  margin: 0;
+  margin: 10;
 }
 
 .container {
   display: flex;
-  height: 100vh;
+  height: 80vh;
 }
 
 .LColumn,
 .main {
-  max-height: 100vh;
+  max-height: 80vh;
 }
 
 .LColumn {
@@ -40,14 +39,14 @@ body {
 }
 
 .RColumn {
-  max-height: 100vh;
+  max-height: 80vh;
   overflow: auto;
   flex: 1;
   background: #ffeeff;
 }
 
 .box {
-  height: 100vh;
+  height: 80vh;
 }
 
 	</style>
@@ -89,17 +88,15 @@ body {
 						<br><br>
 
 						1-A<br>
-						<audio id="Audio1A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio1A" controls preload="metadata" src="">エラー</audio></div>
 						1-B<br>
-						<audio id="Audio1B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio1B" controls preload="metadata" src="">エラー</audio></div>
 						<br><br>
 
 						2-A<br>
-						<audio id="Audio2A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio2A" controls preload="metadata" src="">エラー</audio></div>
 						2-B<br>
-						<audio id="Audio2B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio2B" controls preload="metadata" src="">エラー</audio></div>
 						<br><br>
 
 						3-A<br>
