--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
 .RColumn {
   max-height: 80vh;
   overflow: auto;
-  flex: 1;
+  flex: 3;
   background: #ffeeff;
 }
 
@@ -146,7 +146,7 @@ body {
 				</div>
 
 				<div>
-					<iframe class="RColumn" src="https://docs.google.com/forms/d/e/1FAIpQLSfuUUQ0goWnxX2SEr9ctjA2GvDsqRRsXnbWLgEzY4-XOVYf3A/viewform?embedded=true" height="800" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+					<iframe class="RColumn" src="https://docs.google.com/forms/d/e/1FAIpQLSfuUUQ0goWnxX2SEr9ctjA2GvDsqRRsXnbWLgEzY4-XOVYf3A/viewform?embedded=true" height="100%" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 				</div>
 	
 			</div>
