--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		ol.multi-column {float: left; width: 100%; line-height: 10px;}
 		ol.multi-column li {float: left; width: 50%; margin-bottom: 10px;}
 
+body{
+	zoom: 1.5;
+}
+
 .container {
   display: flex;
   height: 80vh;
@@ -26,7 +30,7 @@
 }
 
 .LColumn {
-  overflow: auto;
+  overflow: hidden;
   flex: 1;
   background: #eeffff;
 }
