--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 		ol.multi-column {float: left; width: 100%; line-height: 10px;}
 		ol.multi-column li {float: left; width: 50%; margin-bottom: 10px;}
 
-body{
-	zoom: 1.5;
-}
 
 .container {
   display: flex;
@@ -44,6 +41,10 @@ body{
   overflow: auto;
   flex: 1;
   background: #ffeeff;
+}
+
+.box {
+  height: 80vh;
 }
 
 	</style>
