--- a/index.html
+++ b/index.html
@@ -86,57 +86,51 @@
 						<br><br>
 
 						1-A<br>
-						<div><audio id="Audio1A" controls preload="metadata" src="">エラー</audio></div>
+						<div><audio id="Audio1A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						1-B<br>
-						<div><audio id="Audio1B" controls preload="metadata" src="">エラー</audio></div>
+						<div><audio id="Audio1B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						2-A<br>
-						<div><audio id="Audio2A" controls preload="metadata" src="">エラー</audio></div>
+						<div><audio id="Audio2A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						2-B<br>
-						<div><audio id="Audio2B" controls preload="metadata" src="">エラー</audio></div>
+						<div><audio id="Audio2B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						3-A<br>
-						<audio id="Audio3A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio3A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						3-B<br>
-						<audio id="Audio3B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio3B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						4-A<br>
-						<audio id="Audio4A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio4A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						4-B<br>
-						<audio id="Audio4B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio4B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						5-A<br>
-						<audio id="Audio5A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio5A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						5-B<br>
-						<audio id="Audio5B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio5B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						6-A<br>
-						<audio id="Audio6A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio6A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						6-B<br>
-						<audio id="Audio6B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio6B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						7-A<br>
-						<audio id="Audio7A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio7A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						7-B<br>
-						<audio id="Audio7B" controls preload="metadata" src="">エラー</audio>
-						<br><br>
+						<div><audio id="Audio7B" controls preload="metadata" src="">エラー</audio><br></div>
+					<br><br>
 
 						8-A<br>
-						<audio id="Audio8A" controls preload="metadata" src="">エラー</audio>
-						<br>
+						<div><audio id="Audio8A" controls preload="metadata" src="">エラー</audio><br></div><br>
 						8-B<br>
-						<audio id="Audio8B" controls preload="metadata" src="">エラー</audio>
+						<div><audio id="Audio8B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
 						<strong>以上です、ありがとうございました。右のボックス内の下にある送信ボタンを押して終えてください。</strong>
