--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 }
 
 .LColumn {
-  overflow: hidden;
+  overflow: scroll;
   flex: 1;
   background: #eeffff;
 }
 
 .LColumn:hover {
-  overflow: auto;
+  overflow: scroll;
 }
 
 .RColumn {
