--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 	<!-- HEADER -->
 	<div id="header_wrap" class="outer" style="height: 100px;">
 		<header class="inner">
-			<h1><font color="#ffffff">参加実験ページ</font></h1>
+			<h1><font color="#ffffff">メロディー聞き比べ</font></h1>
 		</header>
 	</div>
 
 	<!-- MAIN CONTENT -->
-	
+
 	<div id="main_content_wrap" class="outer">
 
 		<section id="main_content" class="inner">
@@ -75,14 +75,14 @@
 				<div class="LColumn">
 					<div class="box">
 
-						<strong>はじめに、下の実験ナンバーを右側の回答ボックスにコピーしてください。</strong>
+						<font color="#000096">はじめに、下の<strong>実験ナンバー</strong>を右側の回答ボックスにコピーしてください。</font>
 						<br><br>
 
 						実験ナンバー
-						<div id="DisplaySeed"></div>
+						<strong><div id="DisplaySeed"></div></strong>
 						<br>
 
-						<strong>以下のAとBの曲を聴いて、良いと思う方を右側のボックスで答えてください。どちらとも言い難い場合は、適当にAかBを選んでください。</strong>
+						<font color="#000096">以下のAとBの曲を聴いて、<strong>メロディーがより自然</strong>と思う方を右側のボックスで答えてください。</font>
 						<br><br>
 
 						1-A<br>
@@ -133,7 +133,7 @@
 						<div><audio id="Audio8B" controls preload="metadata" src="">エラー</audio><br></div>
 						<br><br>
 
-						<strong>以上です、ありがとうございました。右のボックス内の下にある送信ボタンを押して終えてください。</strong>
+						<font color="#000096">以上です、ありがとうございました。右のボックス内の下の方にある<strong>送信ボタン</strong>を押して終えてください。</font>
 
 					</div>
 				</div>
